--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
 		"nette/code-checker": "^3.2",
 		"czproject/assert": "^1.4",
 		"czproject/path-helper": "^4.1",
-		"czproject/git-php": "^4.0"
+		"czproject/git-php": "^4.0",
+		"czproject/php-simple-ast": "@dev"
 	},
 	"require-dev": {
 		"nette/tester": "^2.4"
