--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
 		"czproject/assert": "^1.4",
 		"czproject/path-helper": "^4.1",
 		"czproject/git-php": "^4.0",
-		"czproject/php-simple-ast": "@dev"
+		"czproject/php-simple-ast": "^1.0"
 	},
 	"require-dev": {
 		"nette/tester": "^2.4"
