--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,10 +14,11 @@ jobs:
         uses: janpecha/actions/.github/workflows/nette-tester-library.yml@master
         with:
             phpVersions: '["8.1", "8.2", "8.3"]'
-            lowestDependencies: true
 
     coding-style:
         uses: janpecha/actions/.github/workflows/code-checker.yml@master
 
     static-analysis:
         uses: janpecha/actions/.github/workflows/phpstan.yml@master
+        with:
+            phpVersions: '["8.1", "8.2", "8.3"]'
