--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
 		"czproject/assert": "^1.4",
 		"czproject/path-helper": "^4.1",
 		"czproject/git-php": "^4.0",
-		"czproject/php-simple-ast": "^1.2"
+		"czproject/php-simple-ast": "^1.2",
+		"symfony/yaml": "^7.0"
 	},
 	"require-dev": {
 		"nette/tester": "^2.4"
