--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,7 +13,7 @@ jobs:
     tests:
         uses: janpecha/actions/.github/workflows/nette-tester-project.yml@master
         with:
-            phpVersions: '["8.1", "8.2", "8.3"]'
+            phpVersions: '["8.2", "8.3"]'
 
     coding-style:
         uses: janpecha/actions/.github/workflows/code-checker.yml@master
@@ -21,4 +21,4 @@ jobs:
     static-analysis:
         uses: janpecha/actions/.github/workflows/phpstan.yml@master
         with:
-            phpVersions: '["8.1", "8.2", "8.3"]'
+            phpVersions: '["8.2", "8.3"]'
