--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
 		"czproject/git-php": "^4.0",
 		"czproject/php-simple-ast": "^1.2",
 		"symfony/yaml": "^7.0",
-		"nette/utils": "^3.1"
+		"nette/utils": "^3.1",
+		"composer/semver": "^3.4"
 	},
 	"require-dev": {
 		"nette/tester": "^2.4"
