GA: build - PHPStan - added PHP 8.4

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,4 +21,4 @@ jobs:
     static-analysis:
         uses: janpecha/actions/.github/workflows/phpstan.yml@master
         with:
-            phpVersions: '["8.2", "8.3"]'
+            phpVersions: '["8.2", "8.3", "8.4"]'
