--- a/composer.json
+++ b/composer.json
@@ -19,8 +19,7 @@
 		"nette/utils": "^3.1",
 		"composer/semver": "^3.4",
 		"nette/command-line": "^1.8",
-		"nette/neon": "^3.4",
-		"latte/latte": "^3.0"
+		"nette/neon": "^3.4"
 	},
 	"require-dev": {
 		"nette/tester": "^2.5"
