--- a/phpstan-baseline.neon
+++ b/phpstan-baseline.neon
@@ -67,15 +67,9 @@ parameters:
 			path: src/Extensions/JanpechaActionsExtension.php
 
 		-
-			message: '#^Cannot access offset ''workingDirectory'' on mixed\.$#'
-			identifier: offsetAccess.nonOffsetAccessible
-			count: 1
-			path: src/Extensions/JanpechaActionsExtension.php
-
-		-
 			message: '#^Parameter \#1 \$value of function count expects array\|Countable, mixed given\.$#'
 			identifier: argument.type
-			count: 2
+			count: 1
 			path: src/Extensions/JanpechaActionsExtension.php
 
 		-
@@ -83,3 +77,15 @@ parameters:
 			identifier: argument.type
 			count: 1
 			path: src/Extensions/JanpechaActionsExtension.php
+
+		-
+			message: '#^Strict comparison using \=\=\= between int\<1, 3\> and 0 will always evaluate to false\.$#'
+			identifier: identical.alwaysFalse
+			count: 1
+			path: src/Extensions/JanpechaActionsExtension.php
+
+		-
+			message: '#^Call to function is_array\(\) with array\<0\|1\|2, resource\> will always evaluate to true\.$#'
+			identifier: function.alreadyNarrowedType
+			count: 1
+			path: src/Tasks/Tasks.php
