--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,3 +22,4 @@ jobs:
         uses: janpecha/actions/.github/workflows/phpstan.yml@master
         with:
             phpVersions: '["8.2", "8.3", "8.4"]'
+            extensions: 'phpstan/phpstan-nette'
